# config2

./: Cargo.toml  README.md
.github/workflows/: coverage.yml
config2-derive/: Cargo.toml  README.md
config2-derive/src/: lib.rs  partial.rs  struct_data.rs
examples/: default.rs  factory.rs  optional.rs  simple.rs
src/: lib.rs  source.rs
src/source/: env.rs  file.rs
tests/: default.rs  env.rs  lifetimes.rs  simple.rs
tests/config/: test.toml
