[package]
name = "config2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "config2-derive",
]

[dependencies]
config2_derive = { path = "./config2-derive" }
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.5.8"

[dev-dependencies]
anyhow = "1.0.52"

