[package]
name = "config2"
version = "0.1.0"
edition = "2021"
description = "strongly-typed layered configuration"
license = "Apache-2.0"
repository = "https://github.com/danieleades/config2"
categories = ["config"]
keywords = ["config", "configuration", "derive", "layered", "12 factor"]

[workspace]
members = [
    ".",
    "config2-derive",
]

[features]
env = ["envy"]

[dependencies]
config2_derive = { path = "./config2-derive" }
envy = { version = "0.4.2", optional = true }
serde = { version = "1.0.133", features = ["derive"] }
thiserror = "1.0.30"
toml = "0.7.1"

[dev-dependencies]
anyhow = "1.0.52"

