[package]
name = "config2_derive"
version = "0.1.0"
edition = "2021"
description = "derive macro for the 'config2' crate"
license = "Apache-2.0"
repository = "https://github.com/danieleades/config2"
categories = ["config"]
keywords = ["config", "configuration", "derive", "layered", "12 factor"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = "1.0.84"

[dev-dependencies]
test-case = "2.2.1"
